<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GamePlayed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </TableRow>

    <TextView
        android:id="@+id/PlayerStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/winStats"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/player1"
        android:textSize="30dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/p1percentage"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/player2"
        android:textSize="30dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/p2percentage"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/congratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.37"
                android:textSize="20dp" />

            <Button
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goBack" />
        </TableLayout>
    </LinearLayout>

</LinearLayout>